# 7ma-crawler

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  南信大选点.json
.github/workflows/: ci.yml
docs/: database-migrations.md  development-plan.md  runbook.md
sevenma_crawler/: __init__.py  api.py  cli.py  collector.py  config.py  dashboard.py  db.py  fetch_audit.py  points.py  records.py  schema.sql
sevenma_crawler/migrations/: 0002_fetch_attempt_log.sql
sevenma_crawler/static/: dashboard.css  dashboard.js
sevenma_crawler/templates/: dashboard.html
tests/: conftest.py  test_api.py  test_collector_failures.py  test_collector_helpers.py  test_collector_retries.py  test_dashboard_api.py  test_db_integration.py  test_fetch_audit.py  test_points.py  test_static_checks.py
