[project]
name = "7ma-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "curl-cffi>=0.14.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["sevenma_crawler"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "static: static analysis checks",
]
