[project]
name = "7ma-crawler"
version = "0.1.0"
description = "Collector and dashboard for tracking 7mate vehicles around configured points."
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "curl-cffi>=0.14.0",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.2.10",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["sevenma_crawler"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests requiring PostgreSQL via TEST_DATABASE_URL",
    "static: static analysis checks",
]
